# LateralViewInterview

app/: CMakeLists.txt  build.gradle
app/libs/: renderer.h
app/libs/Graphics/: graphics.h  mat3.h  mat4.h  transform.h  vec3.h  vec4.h
app/libs/Utilities/: asset.h  shader.h  utilities.h
app/src/androidTest/java/com/example/javierchapa/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/models/cube/: cubeBinormals.txt  cubeIndices.txt  cubeNormals.txt  cubeTangents.txt  cubeTexCoords.txt  cubeVertices.txt
app/src/main/assets/shaders/background/: main.frag  main.vert
app/src/main/assets/shaders/cube/: main.frag  main.vert
app/src/main/assets/shaders/sphere/: main.frag  main.vert
app/src/main/cpp/: asset.cpp  native-lib.cpp  renderer.cpp
app/src/main/cpp/chapa/: graphics.cpp  mat3.cpp  mat4.cpp  shader.cpp  transform.cpp  utilities.cpp  vec3.cpp  vec4.cpp
app/src/main/cpp/utils/: lodepng.cpp
app/src/main/java/com/example/javierchapa/myapplication/: JNIWrapper.java  MainActivity.java  RendererWrapper.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/javierchapa/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
